@@ -1,3 +1,8 @@
+2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	* arm-dis.c (coprocessor_opcodes): Add support for HP/DP
+	conversions.
+
 2012-08-24  Matthew  Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	* arm-dis.c (coprocessor_opcodes): Add VRINT.
